_includes/assets/css/inline.css
:root {
	--one: rgb(201,107,60);
	--two: rgb(240,168,112);
	--three: rgb(209,170,145);
	--four: rgb(204,234,230);
	--five:  rgb(144,156,146);
	--six:  rgb(41,49,86);
}


*, *:before, *:after {
  box-sizing: border-box;
}

html,
body {
	color: var(--six);
	padding: 0;
	margin: 0;
	font-family: Arial, sans-serif;
}

body {
	display: grid;
	height: 100vh;
	grid-template-rows: auto 1fr auto;
	background-color: var(--two);
}

main {
	padding: 1em 4%;
	max-width: 100%;
}

main.about-page {
	margin-left: 5vw;
}

main.about-page img {
	width: 100%;
	max-width: 1200px;
	margin: auto;
	display: block;
}

main.manifesto-page iframe {
	width: 80%;
	height: 100%;
	min-height: 1000px;
	margin: auto;
	display: block;
}

p,
pre,
code {
	line-height: 1.5;
}

a[href],
a[href]:visited {
	color: var(--one);
}

a[href]:not(:hover) {
	text-decoration: none;
}

header,
footer {
	padding: 1em;
}

footer {
	display: flex;
	justify-content: flex-start;
	flex-direction: column
}

footer > iframe {
	padding: 0;
	max-width: 300px;
	border: none;
	background-color: transparent;
}

footer > div {
	margin-bottom: 10px;
	margin-right: 10px;
}

footer > div > a[href] {
	margin-left: 10px;
	color: var(--six);

}

footer > div > a[href]:hover {
	color: var(--one);
}

main {
	padding-bottom: 2em;
}

main :first-child,
main > article :first-child {
	margin-top: 0;
}

pre {
	font-size: 14px;
	direction: ltr;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
	-moz-tab-size: 2;
	tab-size: 2;
	-webkit-hyphens: none;
	-moz-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	padding: 1em;
	margin: .5em 0;
}

/* Header Logo (style as h2) */

header > em {
	display: block;
	font-size: 2em;
	margin: .67em 0;
	font-weight: bold;
	font-style: normal;
}

/* Header Nav */
header nav ul {
	display: flex;
	justify-content: center;
	padding: 0;
	list-style: none;
	color: var(--six);
	border-bottom: 1px solid var(--six);;
    padding-bottom: 3%;
    margin: 5px 3%;
}

header nav ul :first-child {
	margin-left: 0;
}

header nav li {
	display: inline-block;
	margin: auto;
}

header nav li a {
	padding: .25em .5em;
	border-radius: .25em;
	display: inline-flex;
	justify-content: center;
	align-items: center;
}

header nav li a img{
	width: 60%;
	max-width: 400px;
	border-radius: 20px;
 }

 header nav li a img#interview-image {
	width: 75%;
 }

header nav li a[href]:not(:hover) {
	text-decoration: none;
}

header nav li a[data-current="current item"] img, header nav li a:hover img {
	background-color: var(--three);
}

/* Posts List */
article {
	margin-bottom: 1em;
	padding-bottom: 1em;
	border-bottom: 1px solid #eee;
	border-bottom: 1px solid var(--four);
}

main > section > article > * {
	margin-top: 0;
	margin-bottom: .5em;
}

/* Post Tags */
a[rel="tag"],
a[rel="tag"]:visited {
	display: inline-block;
  vertical-align: text-top;
  text-transform: uppercase;
	letter-spacing: .1em;
  font-size: .625em;
  padding: 0 .5em;
	line-height: 2em;
	height: 2em;
  border: 1px solid var(--four);
	background-color: var(--four);
	color: var(--six);
  border-radius: .25em;
  text-decoration: none;
	margin: 0 .5em .5em 0;
}

a[rel="tag"]:hover {
	border: 1px solid var(--three);
	background-color: var(--two);
	color: var(--four);
}

a[rel="tag"]:last-child {
	margin-right: 0;
}

/* Contact Form */
form {
  display: grid;
	padding: 2em 0;
}

form label {
  display: none;
}

input,
textarea,
button {
  width: 100%;
  padding: 1em;
  margin-bottom: 1em;
	font-size: 1rem;
	font-family: Arial, sans-serif
}

input,
textarea {
	border: 1px solid white;
}

button {
	border: 1px solid var(--six);
	background-color: var(--six);
	color: var(--four);
	cursor: pointer;
}

.post-list {
	display: flex;
	flex-flow: row wrap;
	justify-content: space-evenly;
	width: 95%;
	margin: auto;
}

.post-list > a {
	margin: 10px;
}

.post-container {
	margin-right: 10px;
}
.post-container > img{
	width: auto;
	height: 300px;
	border: 7px double rgb(183,184,122);
}

.post-container > h4 {
	text-align: left;
	margin-bottom: 0;
	font-size: 16px;
}
.post-container > p {
	text-align: left;
	color: var(--six);
	margin: 0;
	font-size: 12px;
}

.post-container:hover > p {
	color:rgb(121, 122, 83);
	text-decoration: underline;
}
article.post-body > div{
	text-align: center;
}

article.post-body > img {
	width: 300px;
}

article.post-body > p{
	width: 100%;
}
article.post-body > p > img{
	max-width: 100%;
}

.title-header {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	max-width: 1200px;
	margin-bottom: 60px;
}

.title-header > img {
	max-width: 30vh;
}

.title-header > .text-title-header {
	display: flex;
	flex-direction: column;
	margin: auto 10px auto 0;
}

.title-header > .text-title-header > h1 {
margin-top: 10px;
font-size: 2.25rem;
margin-bottom: 10px;
}

.title-header > .text-title-header > * {
	margin: 0 auto 0 0;
	text-align: left;
	font-size: 1.5rem;
}

.title-image {
	width: 100%;
	height: auto;
}
@media screen and (max-width:800px) {
	.title-header {
		display: flex;
		flex-direction: column-reverse;
	}
}


@media screen and (min-width:801px) {
	:root {
		font-size: 1.1rem;
	}	
	main {
		max-width: 1800px;
	}

	footer {
		display: flex;
		flex-direction: column;
	}
}


@media screen and (min-width:1200px) {
	header nav ul {
		display: flex;
		justify-content: center;
	}
}

